# maProc

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  LICENSE  README.md  maproc-cppcheck.cppcheck
include/: dirprocess.hpp  dirwindow.hpp  filedescriptor.hpp  hexview.hpp  mainwindow.hpp  mapped.hpp  pmap.hpp  proclib.hpp  ps.hpp
include/datastructs/: addr.hpp  dir_utils.hpp  erros.hpp  status.hpp  utils.hpp  utils_pid.hpp  win_utils.hpp
include/structs/: addr.hpp  dir_utils.hpp  erros.hpp  status.hpp  utils.hpp  win_utils.hpp
include/utils/: structs.hpp
maproc-cppcheck-cppcheck-build-dir/: arena.a1  dirwindow.a1  dirwindow.s1  filedescriptor.a1  filedescriptor.s1  lastResults.xml  main.a1  main.s1  mainwindow.a1  mainwindow.s1  pmap.a1  pmap.s1  proclib.a1  proclib.s1  ps.a1  ps.s1  qhexview.a1  relf.a1  relf.s1
src/: arena.cpp  dirprocess.cpp  dirprocess.ui  dirwindow.cpp  dirwindow.hpp  dirwindow.ui  filedescriptor.cpp  hexview.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  map.cpp  mapped.cpp  pmap.cpp  proclib.cpp  ps.cpp  qhexview.cpp  relf.cpp
src/gui/: about.ui  dirwindow.ui  mainwindow.ui  mainwindow.ui.autosave
src/include/: arena.hpp  dirwindow.hpp  mainwindow.hpp  pmap.hpp  proclib.hpp  ps.hpp  qhexview.hpp  relf.hpp
src/include/data/: erros.hpp
src/include/data/elf/: structs.hpp
src/include/data/map/: structs.hpp
src/include/data/win/: structs.hpp
src/include/datastructs/: dir_utils.hpp  erros.hpp  utils.hpp  win_utils.hpp
src/include/elf/: relf.cpp  relf.hpp
src/include/fd/: filedescriptor.cpp
src/include/map/: pmap.cpp  pmap.hpp  proclib.cpp  proclib.hpp
src/include/memory/: arena.cpp  arena.hpp
src/include/ps/: ps.cpp  ps.hpp
